# qcip_tools

./: .buildinfo  .bumpversion.cfg  .drone.yml  .gitignore  .gitlab-ci.yml  .install_require  .release_it.yml  CHANGELOG.md  Makefile  Pipfile  README.md  code-documentation.html  contributing.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  release_it.sh  requirements-dev.txt  requirements.in  requirements.txt  scripts.html  search.html  searchindex.js  setup.py
_sources/: contributing.rst.txt  index.rst.txt  install.rst.txt  scripts.rst.txt
code-documentation/: atom.html  basis_set.html  bounding.html  chemistry_files.html  derivatives.html  derivatives_e.html  derivatives_exci.html  derivatives_g.html  math.html  mixins.html  molecule.html  numerical_differentiation.html  quantities.html  symmetry.html  transformations.html
docs/: conf.py  contributing.rst  install.rst  scripts.rst
documentation/: Makefile  make.bat
qcip_tools/: __init__.py  atom.py  basis_set.py  basis_set_esml.py  bounding.py  datafile.py  derivatives.py  derivatives_e.py  derivatives_exci.py  derivatives_g.py  math.py  mixins.py  molecule.py  numerical_differentiation.py  quantities.py  symmetry.py  transformations.py
requirements/: requirements-base.in  requirements-dev.in  requirements.in
scripts/: __init__.py  boltzmann_population.html  check_chemistry_file.html  ct_analysis.html  cube_radial_distribution.html  electrical_derivatives.html  excitations.html  gen_character_table.html  gen_spectrum.html  geometrical_derivatives.html  make_release.py  measure_mols.html  scrap_ESML_basis_sets.py  symmetrise.html  thermochemistry_analysis.html  to_xyz.html
tests/: __init__.py  factories.py  test_basis_set.py  test_derivatives.py  tests_atom.py  tests_bounding.py  tests_chemistry_files.py  tests_datafile.py  tests_math.py  tests_molecule.py  tests_numerical_differentiation.py  tests_properties.py  tests_script_boltzmann.py  tests_script_check_chemistry_file.py  tests_script_ct.py  tests_script_electrical_derivatives.py  tests_symmetry.py  (+4 more)
(+159 files in other folders)
